--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<!--<img src="1vds.PNG" alt="Smiley face" height="42" width="42">-->
+<img src="1vds.PNG" alt="Smiley face" height="42" width="42">
 <h1> 434</h1>
 </body>
 </html>
